# e-commerce-backend

./: .gitignore  pyproject.toml  start.ps1
scripts/: setup_vs_env.py
src/: __init__.py  config.py  loader.py  main.py
src/db/: __init__.py  events.py  models.py
src/routes/: __init__.py  auth.py  index.py
